5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1836_2603.log
== TEST (2019-06-26 22:29:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=
for i in a:
	mat2[i,;]=sorted(mat[i,:],reverse=True)	
mat2=mat2.T
print(mat2)
-- ERROR:
File "XXXX", line 7
    mat2=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:29:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
for i in a:
	mat2[i,;]=sorted(mat[i,:],reverse=True)	
mat2=mat2.T
print(mat2)
-- ERROR:
File "XXXX", line 9
    mat2[i,;]=sorted(mat[i,:],reverse=True)	
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:38:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
for i in a:
	mat2=sorted(mat,reverse=True)	
mat2=mat2.T
print(mat2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 22:38:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
for i in a:
	mat2=sorted(mat,reverse=True)	
mat2=mat2.T
print(mat2)
-- EXECUTION TIME:
1.17512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 8, in <module>
    for i in a:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:38:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
for i in a:
	mat2=sorted(mat,reverse=True)	
mat2=mat2.T
print(mat2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 22:40:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
mat2=sorted(mat,reverse=True)	
mat2=mat2.T
print(mat2)
-- EXECUTION TIME:
1.16533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 8, in <module>
    mat2=sorted(mat,reverse=True)	
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:41:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
mat2=sorted(mat,reverse=True)	
mat2=mat2.T
print(mat2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:05:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=inv(mat)
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
mat2=sorted(mat,reverse=True)	
mat2=inv(mat2)
print(mat2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:05:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=inv(mat)
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
mat2=sorted(mat,reverse=True)	
mat2=inv(mat2)
print(mat2)
-- EXECUTION TIME:
1.22024
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 4, in <module>
    mat=inv(mat)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 551, in inv
    ainv = _umath_linalg.inv(a, signature=signature, extobj=extobj)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 97, in _raise_linalgerror_singular
    raise LinAlgError("Singular matrix")
numpy.linalg.LinAlgError: Singular matrix

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:05:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=inv(mat)
a=shape(mat)[0]
b=shape(mat)[1]
mat2=zeros((a,b),dtype=int)
mat2=sorted(mat,reverse=True)	
mat2=inv(mat2)
print(mat2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:26:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.t
a=shape(mat)[0]
b=shape(mat)[1]
for i in for range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- EXECUTION TIME:
0.688746
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 7
    for i in for range(4):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:26:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.t
a=shape(mat)[0]
b=shape(mat)[1]
for i in for range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- ERROR:
File "XXXX", line 7
    for i in for range(4):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:26:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.t
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- EXECUTION TIME:
1.02352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 4, in <module>
    mat=mat.t
AttributeError: 'numpy.ndarray' object has no attribute 't'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:26:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.t
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:27:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- EXECUTION TIME:
1.05512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 8, in <module>
    mat=sorted(mat[i,:],reverse=True)
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:27:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
mat=mat.T
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[i,:],reverse=True)
print(mat.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:28:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[,:i],reverse=True)

-- ERROR:
File "XXXX", line 7
    mat=sorted(mat[,:i],reverse=True)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[:,i],reverse=True)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:29:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- EXECUTION TIME:
1.26449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 7, in <module>
    mat=sorted(mat[:,i],reverse=True)
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:29:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:45:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(4):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:46:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(b):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:50:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(int(b)):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- EXECUTION TIME:
1.16228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 7, in <module>
    mat=sorted(mat[:,i],reverse=True)
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:50:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(int(b)):
	mat=sorted(mat[:,i],reverse=True)
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:51:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(int(b)):
	mat=sorted(mat[:,int(i)],reverse=True)
print(mat)

-- EXECUTION TIME:
0.959956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 7, in <module>
    mat=sorted(mat[:,int(i)],reverse=True)
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:51:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(int(b)):
	mat=sorted(mat[:,int(i)],reverse=True)
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:54:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
mat=array(eval(input()))
a=shape(mat)[0]
b=shape(mat)[1]
for i in range(int(b)):
	mat[:,i]=sorted(mat[:,int(i)],reverse=True)
print(mat)

-- EXECUTION TIME:
1.18489
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
